Transition From `go get` to `go install`
Transitioning From `go get` to `go install` Due To Deprecation of `go get`

--- a/ext/Makefile
+++ b/ext/Makefile
@@ -3,7 +3,7 @@ webview_app: ext_package
 	cd webview && go build
 
 ext_package:
-	go get github.com/zserge/webview
+	go install github.com/zserge/sakura@latest
 	touch ext_package
   
 install:
